--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest test --watch"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^6.1.4",
